assets/css/index.css
.main-logo {
  background: url(../images/logo-gojek.svg) center center no-repeat;
  background-size: 122px 36px;
  height: 40px;
  display: block;
  text-indent: -9999px;
  margin: 0 auto;
  padding: 0;
}

.sub-text {
  font-family: Raleway;
  font-size: 18px;
  color: white;
  margin: 3px auto 0 auto;
  float: none;
  text-align: center;
}

.navbar-fixed-top {
  max-height: 65px;
}

.navbar-nav li a {
  font-family: Raleway;
  line-height: 60px;
  color: white;
}

.logos {
  margin: 0 auto;
  overflow: hidden;
}

.logos img.large {
  display: block;
  width: 95%;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  -o-filter: grayscale(100%);
  padding-bottom: 60px;
}

.logos img.large1 {
  display: block;
  margin: auto ;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  -o-filter: grayscale(100%);
  padding-top: 20px;
  padding-bottom: 60px;
} 

.section-title {
  font-family: Raleway;
  color: #252525;
  letter-spacing: 3px;
  text-align: center;
}

.section-title1 {
  font-family: Raleway;
  color: #fff;
  text-align: right;
}


.top-separator {
  margin-top: 60px;
  text-align: center;
}

.ripple-wrapper {
  display:none;
}

.content-format {
  box-sizing: border-box;
  font-family: Roboto,sans-serif;
  font-size: 20px;
  font-weight: 300;
  letter-spacing: 0.4px;
  line-height: 27.2px;
  margin-bottom: 10px;
  margin-left: 0px;
  margin-right: 0px;
  margin-top: 0px;
}

.img-wrapper {
  background: #fff;
  padding: 0 20px;
}

#wrapper {
  padding-left: 0;
}

#page-content-wrapper {
  z-index: 2;
  position: relative;
  padding: 65px 0 0;
}

.single-page {
  display: block;
  overflow: block;
  font-size: 14px;
}

header.with-img {
  background: url(/assets/images/header-img.jpg) center right/cover no-repeat;
  display: block;
  width: 100%;
  height: 50vh;
  max-height: 300px;
  position: relative;
}

header.with-img .wrapper {
  background: rgba(0,0,0,.5);
  display: block;
  height: 100%;
}




.single-page #offices {
  position: relative;
}

.single-page #offices .office {
  margin-bottom: 35px;
}

.normal-font {
  font-family: Roboto,sans-serif!important;
}
 
.col-xs-9 {
  float: left;
}

.single-page #offices .title {
  display: block;
  position: relative;
  padding: 30px 45px 0;
  background: #000;
  position: absolute;
  left: 0;
  height: 100%;
  padding: 60px 0 60px 60px;
  z-index: 2;
}

h4 {
  font-size: 18px;
}

.single-page #offices .office h4 {
  text-transform: uppercase;
  font-weight: 400;
}

.single-page #offices .office .detail, .single-page #offices .office h4 {
  margin-bottom: 25px;
  color: #252525;
}

.single-page #offices .office-wrapper {
  padding: 60px 60px 0;
  background: #fff;
  overflow: hidden;
}
   
.single-page #offices .section-title {
  color: #fff;
  font-weight: 300;
  letter-spacing: 3px;
  line-height: 40px;
  text-transform: uppercase;
  font-family: Raleway,sans-serif;
}

element.style {
  height: 100%;
  position: relative;
  touch-action: none;
  top: -1362px;
  opacity: 1;
}

#home1 {
  background: url("../images/goride-drivers.jpg") no-repeat center center;
  background-size: cover;
  background-attachment: fixed;
  color: #fff;
}

.fp-section.fp-table, .fp-slide.fp-table {
  display: table;
  table-layout: fixed;
  width: 100%;
}

.fp-section {
  position: relative;
}

.fp-tableCell {
  display: table-cell;
  vertical-align: middle;
  width: 100%;
}

.wrapper {
  top: 0;
  width: 100%;
  height: 100%;
  background: rgba(0,0,0,0.4);
  z-index: 0;
}

.wrapper.abs {
  max-width: none;
}

.wrapper {
  margin: 0 auto;
}

.abs {
  position: absolute;
}

.container {
  padding-right: 15px;
  padding-left: 15px;
  margin-right: auto;
  margin-left: auto;
}

.row:before {
  display: table;
  content: " ";
}

.row {
  margin-right: -15px;
  margin-left: -15px;
}

.fadeInUp {
  animation-name: fadeInUp;
}

.pull-right {
  float: right!important;
}

.col-md-5 {
  position: relative;
  min-height: 1px;
  padding-right: 15px;
  padding-left: 15px;
}

.text-right {
  text-align: right;
}

.text-left {
  text-align: left;
}

#home2 {
  background: url("../images/goride-header.jpg") no-repeat center center;
  background-size: cover;
  background-attachment: fixed;
  color: #fff;
}

.copyright {
  text-align: center;
  padding.top: 30px;
}

body {
  color: #9B9B9B;
}

footer {
  background: #252525;
  padding: 50px 10px 35px;
  text-align: center;
  font-size: 12px;
  clear: both;
}

.footer-menu {
  display: inline-block;
  vertical-align: top;
  text-align: left;
  padding-bottom: 30px;
}

footer ul {
  list-style: none;
  padding: 0;
}

footer ul li a:hover {
  color: #fff;
  text-decoration: none;
}

footer ul li a {
  color: #9B9B9B;
  text-transform: uppercase;
  padding-bottom: 10px;
}

.caps, .sidebar-nav li a, footer h5, footer ul li, footer ul li a {
  text-transform: uppercase;
}

li {
  padding-bottom: 10px;
  display: list-item;
  text-align: -webkit-match-parent;
}

.content {
  background-color: #333;
  color: #fff;
  width: 75%;
  float: left;
  font-family: Roboto,sans-serif;
}

main {
  overflow: auto;
  margin: 0 auto;
  background-color: #333;
}

main .content {
  width: 100%;
  float: left;
  margin-bottom: 3%;
}

#careers {
  text-align: justify;
}

#careers h1 {
  color: #fff;
  text-align: center;
  font-family: Raleway,sans-serif;
  padding-top: 10px;
  margin-bottom: 1em;
}

#careers p {
  margin-top: 0.2em;
  margin-left: 1.5em;
}

.heading p {
  font-family: Raleway;
  font-size: 20px;
  padding-left: 10%;
  padding-right: 10%;
}

.heading p a {
  color: grey;
  text-decoration: none;
}

#careers h4 {
  font-size: 16px;
  color: #fff;
  padding-left: 0.4em;
  margin-bottom: 1em;
  margin-left: 2em;
  text-align: center;
}

.roles {
  font-family: Raleway;
  margin: 20px;
}

ul.patterns {
  margin-top: 0.8em;
  margin-left: 3.2em;
  margin-bottom: 0.8em;
  font-size: 14px;
  text-align: left;
}

ol, ul {
  list-style: none;
}

#careers ul.patterns li {
  list-style-type: circle;
  list-style-position: inside;
}

.btn {
  text-align: left;
  width: 20%;
}

.button-padding {
  margin-bottom: 10px;
}

